unpackaged/main/default/objects/Contact/fields/Number_of_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Subjects__c</fullName>
    <inlineHelpText>Number of subjects contact is interested in</inlineHelpText>
    <label>Number of Subjects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>