unpackaged/main/default/objects/Contact/fields/OpenStax_Account__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>OpenStax Account SObj related to this user. This should match the information in the contact, or there is an issue between the systems and this record will not be synced.</description>
    <inlineHelpText>OpenStax Account SObj related to this user. This should match the information in the contact, or there is an issue between the systems and this record will not be synced.</inlineHelpText>
    <label>OpenStax Account</label>
    <referenceTo>OpenStax_Account__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>