unpackaged/main/default/objects/Contact/fields/OpenStax_Account_Faculty_Status__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account_Faculty_Status__c</fullName>
    <description>The current reported faculty status from OpenStax Accounts</description>
    <formula>TEXT(OpenStax_Account__r.Faculty_Status__c)</formula>
    <inlineHelpText>The current reported faculty status from OpenStax Accounts. Note: This might be delayed in updating after changing the faculty status in Salesforce.</inlineHelpText>
    <label>OpenStax Account Faculty Status</label>
    <type>Text</type>
</CustomField>