unpackaged/main/default/objects/Contact/fields/OpenStax_Account_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account_Signup_Date__c</fullName>
    <description>Date this user registered for an account on OpenStax Accounts platform</description>
    <formula>OpenStax_Account__r.Signup_Date__c</formula>
    <inlineHelpText>Date this user registered for an account on OpenStax Accounts platform</inlineHelpText>
    <label>OpenStax Account Signup Date</label>
    <type>DateTime</type>
</CustomField>