unpackaged/main/default/objects/Contact/fields/OpenStax_Account_UUID__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account_UUID__c</fullName>
    <description>UUID of OpenStax Account</description>
    <formula>OpenStax_Account__r.Account_UUID__c</formula>
    <inlineHelpText>UUID of OpenStax Account</inlineHelpText>
    <label>OpenStax Account UUID</label>
    <type>Text</type>
</CustomField>