unpackaged/main/default/objects/Contact/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <formula>IF( RecordTypeId = "0120B000000N8bx", IMAGE("/resource/Student_Icon"   ,"", 20, 25) ,
IF(  Tutor_Course_Sections__c  &gt;0   , IMAGE("/resource/Tutor_Icon"     ,"", 20, 25) ,
IF( Number_of_books_adopted__c  &gt;0  , IMAGE("/resource/Textbook_Icon"  ,"OSC Adopter", 20, 30) ,
IMAGE("/resource/None_Icon"  ,"", 25, 25)



)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Icon indicating level of involvement.) Tutor, Textbook, Student, or None.</inlineHelpText>
    <label>Overview</label>
    <type>Text</type>
</CustomField>