unpackaged/main/default/objects/Contact/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <formula>Account.RecordType.Name = "Partner"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if at a partner</inlineHelpText>
    <label>Partner Contact</label>
    <type>Checkbox</type>
</CustomField>