unpackaged/main/default/objects/Contact/fields/Partner_Interest_Form_Fill__c.field-meta.xml
<CustomField>
    <fullName>Partner_Interest_Form_Fill__c</fullName>
    <label>Partner Interest Form Fill</label>
    <type>Date</type>
</CustomField>