unpackaged/main/default/objects/Contact/fields/Past_Students__c.field-meta.xml
<CustomField>
    <fullName>Past_Students__c</fullName>
    <inlineHelpText>Students For past year (academic year).</inlineHelpText>
    <label>Past Year Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>