unpackaged/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjunct Faculty</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Bookstore</fullName>
            </value>
            <value>
                <fullName>Department Head</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Grad Student</fullName>
            </value>
            <value>
                <fullName>Home School Teacher</fullName>
            </value>
            <value>
                <fullName>Instructional Designer</fullName>
            </value>
            <value>
                <fullName>Librarian</fullName>
            </value>
            <value>
                <fullName>Marketer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Partner Portal User</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Academic Developer</fullName>
                <isActive>false</isActive>
                <label>Academic Developer</label>
            </value>
            <value>
                <fullName>Academic Information Specialist</fullName>
                <isActive>false</isActive>
                <label>Academic Information Specialist</label>
            </value>
            <value>
                <fullName>Academic Librarian</fullName>
                <isActive>false</isActive>
                <label>Academic Librarian</label>
            </value>
            <value>
                <fullName>Academic Manager</fullName>
                <isActive>false</isActive>
                <label>Academic Manager</label>
            </value>
            <value>
                <fullName>Academic Success Tutor for all Subjects</fullName>
                <isActive>false</isActive>
                <label>Academic Success Tutor for all Subjects</label>
            </value>
            <value>
                <fullName>Academic Tutor for Anatomy and Physiology</fullName>
                <isActive>false</isActive>
                <label>Academic Tutor for Anatomy and Physiology</label>
            </value>
            <value>
                <fullName>Academic Unit Assistant</fullName>
                <isActive>false</isActive>
                <label>Academic Unit Assistant</label>
            </value>
            <value>
                <fullName>Adjunct Instructor</fullName>
                <isActive>false</isActive>
                <label>Adjunct Instructor</label>
            </value>
            <value>
                <fullName>Adjunt</fullName>
                <isActive>false</isActive>
                <label>Adjunt</label>
            </value>
            <value>
                <fullName>Administrative Assistant</fullName>
                <isActive>false</isActive>
                <label>Administrative Assistant</label>
            </value>
            <value>
                <fullName>Administrator of Nampa Personalized Learning</fullName>
                <isActive>false</isActive>
                <label>Administrator of Nampa Personalized Learning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>