unpackaged/main/default/objects/Contact/fields/PositionT__c.field-meta.xml
<CustomField>
    <fullName>PositionT__c</fullName>
    <inlineHelpText>Text version of position for exporting to Pardot</inlineHelpText>
    <label>PositionT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>