unpackaged/main/default/objects/Contact/fields/Possible_Students_Year__c.field-meta.xml
<CustomField>
    <fullName>Possible_Students_Year__c</fullName>
    <inlineHelpText>Sum of opportunities, including Interest  (This year means academic year).</inlineHelpText>
    <label>Possible Students This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>