unpackaged/main/default/objects/Contact/fields/Previous_Students__c.field-meta.xml
<CustomField>
    <fullName>Previous_Students__c</fullName>
    <inlineHelpText>Students For Past year (academic year).</inlineHelpText>
    <label>Previous Year Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>