unpackaged/main/default/objects/Contact/fields/Previous_Term_Students__c.field-meta.xml
<CustomField>
    <fullName>Previous_Term_Students__c</fullName>
    <description>Populated by DLRS</description>
    <inlineHelpText>Students For past term</inlineHelpText>
    <label>Previous Term Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>