unpackaged/main/default/objects/Contact/fields/Primary_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Contact__c</fullName>
    <formula>Account.Email_for_Leads__c =  Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Partner Contact</label>
    <type>Checkbox</type>
</CustomField>