unpackaged/main/default/objects/Contact/fields/Pronunciation_Guide__c.field-meta.xml
<CustomField>
    <fullName>Pronunciation_Guide__c</fullName>
    <label>Pronunciation Guide</label>
    <length>25</length>
    <type>Text</type>
</CustomField>