unpackaged/main/default/objects/Contact/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>The date that they filled out a renewal form which got entered as a lead and then processed.</description>
    <inlineHelpText>The most recent date that someone has confirmed adoption</inlineHelpText>
    <label>Recent Adoption Date</label>
    <type>Date</type>
</CustomField>