unpackaged/main/default/objects/Contact/fields/Renewal_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Eligible__c</fullName>
    <formula>IF(  HasOptedOutOfEmail , FALSE,
IF( OR(Renewal_Date__c = NULL ,  ISBLANK( Renewal_Date__c )), FALSE,
IF(  OR( Renewal_Date__c &gt;  DATE(2021,04,01), Renewal_Date__c &lt; DATE(2016,04,01) )  , FALSE,
TRUE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Eligible</label>
    <type>Checkbox</type>
</CustomField>