unpackaged/main/default/objects/Contact/fields/Renewed_on_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewed_on_Date__c</fullName>
    <label>Renewed on Date</label>
    <type>Date</type>
</CustomField>