unpackaged/main/default/objects/Contact/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <inlineHelpText>Interest in participating in research</inlineHelpText>
    <label>Research</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Participating</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>