unpackaged/main/default/objects/Contact/fields/Savings_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Savings_Next_Year__c</fullName>
    <label>Savings Next Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>