unpackaged/main/default/objects/Contact/fields/Savings_Past_Years__c.field-meta.xml
<CustomField>
    <fullName>Savings_Past_Years__c</fullName>
    <label>Savings Past Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>