unpackaged/main/default/objects/Contact/fields/School_Location__c.field-meta.xml
<CustomField>
    <fullName>School_Location__c</fullName>
    <formula>Account.School_Location__c</formula>
    <inlineHelpText>Should delete, school location</inlineHelpText>
    <label>School Location</label>
    <type>Text</type>
</CustomField>