unpackaged/main/default/objects/Contact/fields/School_Pell_Grant_Recipient__c.field-meta.xml
<CustomField>
    <fullName>School_Pell_Grant_Recipient__c</fullName>
    <formula>Account.Students_Pell_Grant__c</formula>
    <inlineHelpText>Should delete, schools pell grant %</inlineHelpText>
    <label>School % Pell Grant Recipient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>