unpackaged/main/default/objects/Contact/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <formula>TEXT(Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>School Type (2 year, 4 year)</inlineHelpText>
    <label>School Type</label>
    <type>Text</type>
</CustomField>