unpackaged/main/default/objects/Contact/fields/School_Using_Competitor__c.field-meta.xml
<CustomField>
    <fullName>School_Using_Competitor__c</fullName>
    <formula>Account.Contact_using_competitor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Should Delete: Is someone at the school using a tutor competitor</inlineHelpText>
    <label>School Using Competitor</label>
    <type>Checkbox</type>
</CustomField>