unpackaged/main/default/objects/Contact/fields/Search_Box__c.field-meta.xml
<CustomField>
    <fullName>Search_Box__c</fullName>
    <inlineHelpText>Puts a bunch of text in a box so it will be searchable</inlineHelpText>
    <label>Search Box</label>
    <length>100</length>
    <type>Text</type>
</CustomField>