unpackaged/main/default/objects/Contact/fields/Selected_Books__c.field-meta.xml
<CustomField>
    <fullName>Selected_Books__c</fullName>
    <description>The books this contacts has identified as adopting</description>
    <label>Selected Books</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Books</valueSetName>
    </valueSet>
</CustomField>