unpackaged/main/default/objects/Contact/fields/SendFacultyVerificationTo__c.field-meta.xml
<CustomField>
    <fullName>SendFacultyVerificationTo__c</fullName>
    <inlineHelpText>Send fac v email to this address</inlineHelpText>
    <label>SendFacultyVerificationTo</label>
    <type>Email</type>
</CustomField>