unpackaged/main/default/objects/Contact/fields/Skip_Fac_V_Email__c.field-meta.xml
<CustomField>
    <fullName>Skip_Fac_V_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Fac V Email</label>
    <type>Checkbox</type>
</CustomField>