unpackaged/main/default/objects/Contact/fields/Skip_Flow__c.field-meta.xml
<CustomField>
    <fullName>Skip_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Not used - helped with automation</inlineHelpText>
    <label>Skip Flow</label>
    <type>Checkbox</type>
</CustomField>