unpackaged/main/default/objects/Contact/fields/Spring_Students__c.field-meta.xml
<CustomField>
    <fullName>Spring_Students__c</fullName>
    <inlineHelpText>Spring students for current school year</inlineHelpText>
    <label>Current SY Spring Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>