unpackaged/main/default/objects/Contact/fields/Subject_Interest_Text__c.field-meta.xml
<CustomField>
    <fullName>Subject_Interest_Text__c</fullName>
    <label>Subject Interest Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>