unpackaged/main/default/objects/Contact/fields/Teacher_Join_Links__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Join_Links__c</fullName>
    <inlineHelpText>URL for a teacher to join tutor</inlineHelpText>
    <label>Teacher Join Links</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>