unpackaged/main/default/objects/Contact/fields/Temp_Account_Verified__c.field-meta.xml
<CustomField>
    <fullName>Temp_Account_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp Account Verified</label>
    <type>Checkbox</type>
</CustomField>