unpackaged/main/default/objects/Contact/fields/Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Testimonial__c</fullName>
    <inlineHelpText>Are they willing to give testimonial</inlineHelpText>
    <label>Give Testimonial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>