unpackaged/main/default/objects/Contact/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <inlineHelpText>Similar to marketing theme above</inlineHelpText>
    <label>Theme</label>
    <length>100</length>
    <type>Text</type>
</CustomField>