unpackaged/main/default/objects/Contact/fields/To_Date_Students__c.field-meta.xml
<CustomField>
    <fullName>To_Date_Students__c</fullName>
    <formula>Current_Students__c  +  Previous_Students__c +  Past_Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Students For years up to current year</inlineHelpText>
    <label>To Date Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>