unpackaged/main/default/objects/Contact/fields/TOA_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>TOA_Create_Date__c</fullName>
    <inlineHelpText>The earliest one</inlineHelpText>
    <label>TOA Create Date</label>
    <type>DateTime</type>
</CustomField>