unpackaged/main/default/objects/Contact/fields/Total_MQL_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_MQL_Score__c</fullName>
    <label>Total MQL Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>