unpackaged/main/default/objects/Contact/fields/Tutor__c.field-meta.xml
<CustomField>
    <fullName>Tutor__c</fullName>
    <label>Tutor prospect stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Warm</fullName>
            </value>
            <value>
                <fullName>2. Contacted</fullName>
            </value>
            <value>
                <fullName>3. Interested</fullName>
            </value>
            <value>
                <fullName>5. Created a preview course in Tutor</fullName>
            </value>
            <value>
                <fullName>6. Created a Real Course in Tutor</fullName>
            </value>
            <value>
                <fullName>7. Lost</fullName>
            </value>
            <value>
                <fullName>4. Demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>