unpackaged/main/default/objects/Contact/fields/Tutor_course_pre_june_2020__c.field-meta.xml
<CustomField>
    <fullName>Tutor_course_pre_june_2020__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tutor course pre june 2020</label>
    <type>Checkbox</type>
</CustomField>