unpackaged/main/default/objects/Contact/fields/Tutor_Course_Sections__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Course_Sections__c</fullName>
    <label>Tutor Course Sections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>