unpackaged/main/default/objects/Contact/fields/Tutor_Interest__c.field-meta.xml
<CustomField>
    <fullName>Tutor_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is contact interested in Tutor</inlineHelpText>
    <label>Tutor Interest</label>
    <type>Checkbox</type>
</CustomField>