unpackaged/main/default/objects/Contact/fields/Using_ancillaries__c.field-meta.xml
<CustomField>
    <fullName>Using_ancillaries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using ancillaries</label>
    <type>Checkbox</type>
</CustomField>