unpackaged/main/default/objects/Contact/fields/Using_Partner_Product__c.field-meta.xml
<CustomField>
    <fullName>Using_Partner_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using Partner Product</label>
    <type>Checkbox</type>
</CustomField>