unpackaged/main/default/objects/Contact/fields/Using_resources_for_online_teaching__c.field-meta.xml
<CustomField>
    <fullName>Using_resources_for_online_teaching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using resources for online teaching</label>
    <type>Checkbox</type>
</CustomField>