unpackaged/main/default/objects/Contact/fields/who_chooses_books__c.field-meta.xml
<CustomField>
    <fullName>who_chooses_books__c</fullName>
    <label>who chooses books</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Who_Chooses_Book</valueSetName>
    </valueSet>
</CustomField>