unpackaged/main/default/objects/Contact/listViews/Contacts_with_Unknown_Schools.listView-meta.xml
<ListView>
    <fullName>Contacts_with_Unknown_Schools</fullName>
    <columns>FULL_NAME</columns>
    <columns>FV_Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>OpenStax_Account_Signup_Date__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FV_Status__c</field>
        <operation>equals</operation>
        <value>pending_faculty</value>
    </filters>
    <filters>
        <field>Accounts_UUID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Contacts Needing CS Review</label>
</ListView>