unpackaged/main/default/objects/Contact/listViews/Find_Me_A_Home.listView-meta.xml
<ListView>
    <fullName>Find_Me_A_Home</fullName>
    <columns>FV_Status__c</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Signup_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Find Me A Home</value>
    </filters>
    <label>Find Me A Home</label>
</ListView>