unpackaged/main/default/objects/Contact/listViews/NewThisWeek.listView-meta.xml
<ListView>
    <fullName>NewThisWeek</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>OpenStax_Account_Signup_Date__c</columns>
    <columns>FV_Status__c</columns>
    <columns>OpenStax_Account_Faculty_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
</ListView>