unpackaged/main/default/objects/Contact/listViews/Partners.listView-meta.xml
<ListView>
    <fullName>Partners</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>Position__c</field>
        <operation>includes</operation>
        <value>Primary,Marketing,Partner Portal User</value>
    </filters>
    <label>Partners</label>
</ListView>